tests/e2e/index_error.error
Error: syntax error in story at line 3, column 5

3|    c = a[b]
          ^^^

E0104: `int` can't be indexed with `b` of type `int`
