tests/e2e/index_error.story
a = 0
b = 0
c = a[b]
